--- a/src/test/resources/BannerConfig/safeway/shop/safeway_shop_prod.properties
+++ b/src/test/resources/BannerConfig/safeway/shop/safeway_shop_prod.properties
@@ -13,5 +13,5 @@ ADDRESSLINE1 = 5567 Baldwin Way
 ADDRESSLINE1FORSR = 5125 Willowview Ct
 
 ZIPCODE_DIFF = 94568
-
+ZIPCODE_INSTORE=94568
 MAX_QUANTITY = 20
